[tool.poetry]
name = "pdsa"
version = "0.1.0"
description = ""
authors = ["danieltanfh <danieltanfh95@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
cryptography = "^45.0.4"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
